# test-build

./: LICENSE  pyproject.toml  setup.py
.github/: dependabot.yml
.github/workflows/: release_build.yml
src/const_size/: __init__.py  _const_size.pyi  const_size.cpp  const_size_base.cpp  const_size_base.hpp  const_size_classes.cpp  const_size_classes.hpp
src/const_size.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/const_size/const_size/: __init__.py  _base.py  _classes.py
stubs/const_size/: _const_size.pyi
