[build-system]
requires = [
    "setuptools >= 77.0.3",
    "pybind11 >= 3.0.4",
]
build-backend = "setuptools.build_meta"

[project]
name = "const_size"
version = "0.0.1a"
authors = [
    { name = "Ярыкин Евгений" }
]
license = "Zlib"
license-files = ["LICENSE"]
classifiers = [
    "Private :: Do Not Upload",
]
requires-python = ">=3.12"
dependencies = [
    "typing-extensions==4.12.0",
]

[project.optional-dependencies]
dev = [
    "build==1.5.*",
    "endstone-stubgen==0.1.1",
]

[project.urls]
source = "https://github.com/ZedZhenOS/const_size"

[tool.setuptools.exclude-package-data]
"*" = ["*.cpp", "*.hpp"]
